# Tutorato_InfoA_2023-24

./: CMakeLists.txt  es1.c  es2.c  es3.c  es4.c  es5.c  es6.c  es7.c
