cmake_minimum_required(VERSION 3.27)
project(Tutorato_18012024 C)

set(CMAKE_C_STANDARD 11)

add_executable(es1 es1.c)
add_executable(es2 es2.c)
add_executable(es3 es3.c)
add_executable(es4 es4.c)
add_executable(es5 es5.c)
add_executable(es6 es6.c)
add_executable(es7 es7.c)

add_executable(tde liste.c)
